--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,18 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="SettingActivityTheme" parent="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
+        <!-- Customize your theme here. -->
+        <item name="android:activityOpenEnterAnimation">@anim/anim_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/anim_right_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/anim_right_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/anim_right_out</item>
+    </style>
+    <style name="GenerateActivityTheme" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:activityOpenEnterAnimation">@anim/anim_right_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/anim_left_out</item>
+        <item name="android:activityCloseEnterAnimation">@anim/anim_right_in</item>
+        <item name="android:activityCloseExitAnimation">@anim/anim_left_out</item>
+    </style>
 </resources>
