--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="match_parent">
         <com.jinwei.tvgame2048.ui.GameSurfaceView
             android:id="@+id/game_surface_view"
+            android:focusableInTouchMode="true"
+            android:focusable="true"
             android:layout_gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="450dp" />
@@ -19,17 +21,46 @@
 
     <LinearLayout
         android:id="@+id/group1"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         android:background="#ffffffff"
         android:layout_width="410dp"
         android:layout_height="match_parent">
-        <TextView
-            android:text="0"
-            android:layout_marginTop="450dp"
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/score_text_view"
+        <LinearLayout
+            android:layout_marginTop="400dp"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/score_textview"
+                android:text="Scores:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginLeft="20dp"
+                style="@style/score_textview"
+                android:text="0"
+                android:id="@+id/score_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/score_textview"
+                android:text="Best:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginLeft="20dp"
+                style="@style/score_textview"
+                android:text="0"
+                android:id="@+id/history_text_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
