--- a/app/src/main/res/layout/activity_game_settings.xml
+++ b/app/src/main/res/layout/activity_game_settings.xml
@@ -6,36 +6,113 @@
     tools:context="com.jinwei.tvgame2048.ui.GameSettingsActivity">
     <LinearLayout
         android:orientation="vertical"
-        android:background="#878787"
+        android:background="@color/bg_game_settings"
         android:layout_alignParentRight="true"
-        android:layout_width="410dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:weightSum="1">
-
-        <Switch
-            android:id="@+id/toggle_button_sound"
-            android:background="@drawable/setting_bg"
-            android:text="Sound"
-            android:thumb="@drawable/thumb"
-            android:thumbTextPadding="15dp"
-            android:track="@drawable/track"
-            android:layout_gravity="center_horizontal"
+        <ImageView
+            android:src="@mipmap/game_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:background="@android:color/holo_orange_light"
+            android:layout_width="match_parent"
+            android:layout_height="2dp" />
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:id="@+id/game_settings_sound"
+            android:background="@drawable/bg_selector_focus"
             android:layout_marginTop="30dp"
-            android:paddingLeft="100dp"
-            android:paddingRight="100dp"
+            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
-        <Button
-            android:id="@+id/button_back"
-            android:background="@drawable/setting_bg"
-            android:text="go back"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/settings_text_item_style"
+                android:layout_marginStart="50dp"
+                android:layout_gravity="left"
+                android:text="@string/game_setting_sound"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_gravity="right"
+                android:layout_marginEnd="50dp"
+                android:src="@mipmap/ic_settings_sound_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:id="@+id/game_settings_go_back"
+            android:background="@drawable/bg_selector_focus"
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center_horizontal"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
-        <Button
-            android:id="@+id/button_restart"
-            android:background="@drawable/setting_bg"
-            android:text="restart"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/settings_text_item_style"
+                android:layout_gravity="left"
+                android:layout_marginStart="50dp"
+                android:text="@string/game_setting_go_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_gravity="right"
+                android:layout_marginEnd="50dp"
+                android:src="@mipmap/ic_settings_sound_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:id="@+id/game_settings_go_home"
+            android:background="@drawable/bg_selector_focus"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/settings_text_item_style"
+                android:layout_gravity="left"
+                android:layout_marginStart="50dp"
+                android:text="@string/game_setting_go_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_marginEnd="50dp"
+                android:layout_gravity="right"
+                android:src="@mipmap/ic_settings_sound_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="horizontal"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:id="@+id/game_settings_restart"
+            android:background="@drawable/bg_selector_focus"
+            android:layout_marginTop="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                style="@style/settings_text_item_style"
+                android:layout_gravity="left"
+                android:layout_marginStart="50dp"
+                android:text="@string/game_setting_restart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_gravity="right"
+                android:layout_marginEnd="50dp"
+                android:layout_marginLeft="30dp"
+                android:src="@mipmap/ic_settings_sound_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
     </LinearLayout>
 </RelativeLayout>
