--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_fragment_container"
+    android:background="@mipmap/game_bg"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,45 +23,47 @@
     <LinearLayout
         android:id="@+id/group1"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:background="#ffffffff"
+        android:orientation="horizontal"
         android:layout_width="410dp"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_marginTop="400dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/score_textview"
-                android:text="Scores:"
+                android:text="@string/game_current_scores"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:layout_marginLeft="20dp"
                 style="@style/score_textview"
+                android:text="@string/game_best_scores"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+     </LinearLayout>
+        <LinearLayout
+            android:layout_marginTop="400dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_marginLeft="20dp"
+                style="@style/score_title_textview"
                 android:text="0"
                 android:id="@+id/score_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                style="@style/score_textview"
-                android:text="Best:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
             <TextView
                 android:layout_marginLeft="20dp"
-                style="@style/score_textview"
+                style="@style/score_title_textview"
                 android:text="0"
                 android:id="@+id/history_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
