--- a/app/src/main/res/layout/ask_dialog_layout.xml
+++ b/app/src/main/res/layout/ask_dialog_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:id="@+id/relative_layout"
     android:background="@drawable/bg_round_rectangle_white_stroke"
-    android:layout_width="400dp"
-    android:layout_height="200dp">
+    android:layout_width="@dimen/ask_dialog_width"
+    android:layout_height="@dimen/ask_dialog_height">
     <ImageView
         android:background="@color/half_transparency_wihte"
         android:src="@mipmap/game_name"
@@ -27,29 +26,21 @@
         android:text="@string/allow_go_back_ask"
         android:layout_width="wrap_content"
         android:layout_height="100dp" />
-    <LinearLayout
-        android:background="#00000000"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/button_continue"
-            style="@style/dialog_button"
-            android:text="continue"
-            android:layout_width="90dp"
-            android:layout_height="30dp" />
-        <Button
-            android:id="@+id/button_restart"
-            style="@style/dialog_button"
-            android:text="restart"
-            android:layout_width="90dp"
-            android:layout_height="30dp" />
-        <Button
-            android:id="@+id/button_share"
-            style="@style/dialog_button"
-            android:text="share"
-            android:layout_width="90dp"
-            android:layout_height="30dp" />
-    </LinearLayout>
+    <Button
+        style="@style/dialog_button"
+        android:text="@string/allow_go_back"
+        android:id="@+id/dialog_button_yes"
+        android:layout_below="@+id/ask_text"
+        android:layout_marginLeft="20dp"
+        android:layout_width="90dp"
+        android:layout_height="40dp" />
+    <Button
+        style="@style/dialog_button"
+        android:text="@string/forbid_go_back"
+        android:id="@+id/dialog_button_no"
+        android:layout_below="@+id/ask_text"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_width="90dp"
+        android:layout_height="40dp" />
 </RelativeLayout>
