--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="frament_header_button_margin_top">20dp</dimen>
+    <dimen name="text_mode_size">30sp</dimen>
+    <dimen name="ask_dialog_width">400dp</dimen>
+    <dimen name="ask_dialog_height">200dp</dimen>
 </resources>
