--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,9 +34,43 @@
     </style>
     <style name="dialog_button">
         <item name="android:layout_margin">10dp</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:background">@drawable/bg_button_dialog_selector</item>
     </style>
     <style name="score_textview">
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@android:color/holo_orange_light</item>
+    </style>
+    <style name="settings_text_item_style">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@android:color/holo_orange_light</item>
+    </style>
+    <style name="score_title_textview">
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@android:color/holo_orange_dark</item>
+    </style>
+    <style name="choice_mode_button_style">
+        <item name="android:shadowColor">@color/bg_game_settings</item>
         <item name="android:textSize">30sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:background">@drawable/bg_selector_focus</item>
+    </style>
+    <style name="choice_mode_button_style_top">
+        <item name="android:shadowColor">@color/bg_game_settings</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:background">@drawable/bg_selector_focus_edge_top</item>
+    </style>
+    <style name="choice_mode_button_style_bottom">
+        <item name="android:shadowColor">@color/bg_game_settings</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:layout_marginLeft">5dp</item>
+        <item name="android:layout_marginRight">5dp</item>
+        <item name="android:background">@drawable/bg_selector_forcus_edge_bottom</item>
     </style>
 </resources>
