--- a/app/src/main/res/layout/activity_game_settings.xml
+++ b/app/src/main/res/layout/activity_game_settings.xml
@@ -6,113 +6,96 @@
     tools:context="com.jinwei.tvgame2048.ui.GameSettingsActivity">
     <LinearLayout
         android:orientation="vertical"
-        android:background="@color/bg_game_settings"
+        android:background="@drawable/bg_round_rectangle_white_stroke"
         android:layout_alignParentRight="true"
-        android:layout_width="300dp"
-        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:weightSum="1">
-        <ImageView
-            android:src="@mipmap/game_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:background="@android:color/holo_orange_light"
-            android:layout_width="match_parent"
-            android:layout_height="2dp" />
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            style="@style/settings_linearlayout_item_style"
+            android:background="@drawable/bg_selector_focus_edge_top"
             android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
+            android:layout_marginTop="5dp"
             android:id="@+id/game_settings_sound"
-            android:background="@drawable/bg_selector_focus"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/settings_text_item_style"
-                android:layout_marginStart="50dp"
-                android:layout_gravity="left"
                 android:text="@string/game_setting_sound"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content" />
             <ImageView
-                android:layout_gravity="right"
-                android:layout_marginEnd="50dp"
+                style="@style/settings_image_item_style"
                 android:src="@mipmap/ic_settings_sound_on"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </FrameLayout>
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        </LinearLayout>
+        <ImageView
+            android:background="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="5dp" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            style="@style/settings_linearlayout_item_style"
+            android:background="@drawable/bg_selector_focus"
             android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:id="@+id/game_settings_go_back"
-            android:background="@drawable/bg_selector_focus"
-            android:layout_marginTop="30dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/settings_text_item_style"
-                android:layout_gravity="left"
-                android:layout_marginStart="50dp"
                 android:text="@string/game_setting_go_back"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content" />
             <ImageView
-                android:layout_gravity="right"
-                android:layout_marginEnd="50dp"
+                style="@style/settings_image_item_style"
                 android:src="@mipmap/ic_settings_sound_on"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </FrameLayout>
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
+        </LinearLayout>
+        <ImageView
+            android:background="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="5dp" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            style="@style/settings_linearlayout_item_style"
+            android:background="@drawable/bg_selector_focus"
             android:id="@+id/game_settings_go_home"
-            android:background="@drawable/bg_selector_focus"
-            android:layout_marginTop="30dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/settings_text_item_style"
-                android:layout_gravity="left"
-                android:layout_marginStart="50dp"
                 android:text="@string/game_setting_go_home"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content" />
             <ImageView
-                android:layout_marginEnd="50dp"
-                android:layout_gravity="right"
+                style="@style/settings_image_item_style"
                 android:src="@mipmap/ic_settings_sound_on"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </FrameLayout>
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
+        </LinearLayout>
+        <ImageView
+            android:background="@android:color/white"
+            android:layout_width="match_parent"
+            android:layout_height="5dp" />
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            style="@style/settings_linearlayout_item_style"
+            android:background="@drawable/bg_selector_forcus_edge_bottom"
             android:id="@+id/game_settings_restart"
-            android:background="@drawable/bg_selector_focus"
-            android:layout_marginTop="30dp"
+            android:layout_marginBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 style="@style/settings_text_item_style"
-                android:layout_gravity="left"
-                android:layout_marginStart="50dp"
                 android:text="@string/game_setting_restart"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content" />
             <ImageView
-                android:layout_gravity="right"
-                android:layout_marginEnd="50dp"
-                android:layout_marginLeft="30dp"
+                style="@style/settings_image_item_style"
                 android:src="@mipmap/ic_settings_sound_on"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-        </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
