--- a/app/src/main/res/layout/ask_dialog_layout.xml
+++ b/app/src/main/res/layout/ask_dialog_layout.xml
@@ -7,6 +7,7 @@
     <ImageView
         android:background="@color/half_transparency_wihte"
         android:src="@mipmap/game_name"
+        android:layout_margin="5dp"
         android:id="@+id/header_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
