--- a/app/src/main/res/drawable/bg_default_button.xml
+++ b/app/src/main/res/drawable/bg_default_button.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="0dp" />
-    <solid android:color="@color/half_transparency_wihte"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+
+</layer-list>
