--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,18 @@
     android:layout_height="match_parent"
     tools:context="com.jinwei.tvgame2048.MainActivity">
     <RelativeLayout
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="100dp"
         android:background="@drawable/bg_round_rectangle_white_stroke"
         android:layout_gravity="center_vertical"
-        android:layout_width="460dp"
-        android:layout_height="460dp">
+        android:layout_width="410dp"
+        android:layout_height="410dp">
         <com.jinwei.tvgame2048.ui.GameSurfaceView
             android:id="@+id/game_surface_view"
             android:focusableInTouchMode="true"
             android:focusable="true"
             android:layout_centerInParent="true"
-            android:layout_width="450dp"
-            android:layout_height="450dp" />
+            android:layout_width="400dp"
+            android:layout_height="400dp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -72,6 +72,27 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
      </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/text_mode"
+                android:textSize="20sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/text_hint"
+                android:textSize="20sp"
+                android:layout_below="@+id/text_hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
