--- a/app/src/main/res/drawable/bg_round_rectangle_stroke.xml
+++ b/app/src/main/res/drawable/bg_round_rectangle_stroke.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="12dp" />
-    <solid android:color="@color/half_transparency_wihte"/>
-    <stroke android:color="@android:color/white"
+    <solid android:color="@android:color/white"/>
+    <stroke android:color="@android:color/darker_gray"
         android:width="5dp" />
 </shape>
