--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_fragment_container"
-    android:background="@mipmap/game_bg"
+    android:background="@mipmap/game_background"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.jinwei.tvgame2048.MainActivity">
     <RelativeLayout
         android:layout_marginLeft="100dp"
-        android:background="@drawable/bg_round_rectangle_white_stroke"
         android:layout_gravity="center_vertical"
         android:layout_width="410dp"
         android:layout_height="410dp">
@@ -30,7 +29,7 @@
             android:id="@+id/text_scores_dex"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:background="@drawable/bg_round_rectangle_white_stroke"
+            android:background="@drawable/bg_round_rectangle_stroke"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <LinearLayout
