--- a/app/src/main/res/layout/game_mode_choice.xml
+++ b/app/src/main/res/layout/game_mode_choice.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@mipmap/game_bg"
+    android:background="@mipmap/game_background"
     android:id="@+id/choice_mode_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
