--- a/app/src/main/res/layout/game_mode_choice_body.xml
+++ b/app/src/main/res/layout/game_mode_choice_body.xml
@@ -6,15 +6,14 @@
     android:layout_height="match_parent">
     <FrameLayout
         android:layout_centerInParent="true"
-        android:background="@drawable/bg_round_rectangle_white_stroke"
-        android:layout_width="406dp"
-        android:layout_height="406dp">
+        android:layout_width="400dp"
+        android:layout_height="400dp">
         <ImageView
             android:src="@mipmap/mode3"
             android:id="@+id/fragment_body_imageview"
             android:layout_gravity="center"
-            android:layout_width="400dp"
-            android:layout_height="400dp" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </FrameLayout>
 
 </RelativeLayout>
