--- a/app/src/main/res/layout/game_mode_choice_header.xml
+++ b/app/src/main/res/layout/game_mode_choice_header.xml
@@ -8,7 +8,7 @@
 <LinearLayout
         android:orientation="vertical"
         android:layout_centerInParent="true"
-        android:background="@drawable/bg_round_rectangle_white_stroke"
+        android:background="@drawable/bg_round_rectangle_stroke"
         android:layout_width="250dp"
         android:layout_height="wrap_content">
         <Button
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="75dp" />
         <ImageView
-            android:background="@android:color/white"
+            android:background="@android:color/darker_gray"
             android:layout_width="match_parent"
             android:layout_height="3dp" />
         <Button
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="75dp" />
         <ImageView
-            android:background="@android:color/white"
+            android:background="@android:color/darker_gray"
             android:layout_width="match_parent"
             android:layout_height="3dp" />
         <Button
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="75dp" />
         <ImageView
-            android:background="@android:color/white"
+            android:background="@android:color/darker_gray"
             android:layout_width="match_parent"
             android:layout_height="3dp" />
         <Button
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="75dp" />
         <ImageView
-            android:background="@android:color/white"
+            android:background="@android:color/darker_gray"
             android:layout_width="match_parent"
             android:layout_height="3dp" />
         <Button
