--- a/app/src/main/res/drawable/bg_focus_button_edge_top.xml
+++ b/app/src/main/res/drawable/bg_focus_button_edge_top.xml
@@ -4,7 +4,7 @@
     <!-- 第一层 -->
     <item>
         <shape>
-            <solid android:color="@android:color/holo_blue_light" />
+            <solid android:color="@color/blue_number2" />
             <!-- 圆角 -->
             <corners android:radius="10dp" />
         </shape>
@@ -14,7 +14,7 @@
     <item android:top="10dp">
         <shape>
             <!-- 实心填充颜色 -->
-            <solid android:color="@android:color/holo_blue_light"/>
+            <solid android:color="@color/blue_number2"/>
         </shape>
     </item>
 
