--- a/app/src/main/res/layout/dialog_game_win.xml
+++ b/app/src/main/res/layout/dialog_game_win.xml
@@ -2,54 +2,46 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:id="@+id/relative_layout"
-    android:background="@drawable/bg_round_rectangle_stroke"
-    android:layout_width="400dp"
-    android:layout_height="200dp">
-    <ImageView
-        android:background="@color/half_transparency_wihte"
-        android:src="@mipmap/game_name"
-        android:id="@+id/header_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <ImageView
-        android:id="@+id/header_line"
-        android:layout_below="@+id/header_image"
-        android:background="@android:color/white"
-        android:layout_width="match_parent"
-        android:layout_height="2dp" />
-    <TextView
-        android:id="@+id/ask_text"
-        android:gravity="center"
-        android:textSize="@dimen/text_mode_size"
-        android:textColor="@android:color/holo_blue_light"
-        android:layout_below="@id/header_line"
-        android:layout_centerHorizontal="true"
-        android:text="@string/allow_go_back_ask"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
-        android:background="#00000000"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/button_continue"
-            style="@style/dialog_button"
-            android:text="continue"
-            android:layout_width="90dp"
-            android:layout_height="30dp" />
-        <Button
-            android:id="@+id/button_restart"
-            style="@style/dialog_button"
-            android:text="restart"
-            android:layout_width="90dp"
-            android:layout_height="30dp" />
-        <Button
-            android:id="@+id/button_share"
-            style="@style/dialog_button"
-            android:text="share"
-            android:layout_width="90dp"
-            android:layout_height="30dp" />
+        <TextView
+            android:id="@+id/ask_text"
+            android:gravity="center"
+            android:textSize="@dimen/text_mode_size"
+            android:textColor="@color/blue_number2"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/allow_go_back_ask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:background="#00000000"
+            android:layout_below="@+id/ask_text"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/button_continue"
+                style="@style/dialog_button"
+                android:text="continue"
+                android:layout_width="90dp"
+                android:layout_height="30dp" />
+            <Button
+                android:id="@+id/button_restart"
+                style="@style/dialog_button"
+                android:text="restart"
+                android:layout_width="90dp"
+                android:layout_height="30dp" />
+            <Button
+                android:id="@+id/button_share"
+                style="@style/dialog_button"
+                android:text="share"
+                android:layout_width="90dp"
+                android:layout_height="30dp" />
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
