--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="text_mode_size">30sp</dimen>
     <dimen name="ask_dialog_width">400dp</dimen>
     <dimen name="ask_dialog_height">200dp</dimen>
+    <dimen name="width_stroke">12dp</dimen>
 </resources>
